fix vertical align

--- a/style.css
+++ b/style.css
@@ -297,6 +297,9 @@ section{
   .ml17{
     margin: unset;
   }
+  .vl{
+    height: 90%;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
